# unebi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang.cmake
include/unebi/: chars.hpp  locator.hpp  util.hpp
include/unebi/detail/: chars.hpp  locator.hpp  util.hpp
include/unebi/fwd/: chars.hpp  locator.hpp
tests/: CMakeLists.txt  googletest-download.cmake  testChars.cxx  testLocator.cxx  testUtil.cxx  tools.hpp
